# SignPro

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: TrainData.ipynb  app.py  dataUtils.py  extractData.py  handmodel.pth
src/static/js/: app.js
src/templates/: index.html
src/uploads/: a.txt  b.txt  c.txt  classes.txt  d.txt  echec.txt  handmodel.pth
