[tool.poetry]
name = "signpro"
version = "0.1.0"
description = "A project for the course of mobility and multimodality, the project is intitled SignPro and aims to provide a plateform to learn the sign language in a multimodal way."
authors = ["ABMesbh <mesbahabde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
flask = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
